--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		document.getElementById("createTable").remove();
 		for (var i = 1; i <= q; i++) {
 			var table = document.getElementById("mainTable");
-		    var row = table.insertRow(document.getElementById("mainTable").length);
+		    var row = table.insertRow(1);
 		    var cell1 = row.insertCell(0);
 		    var cell2 = row.insertCell(1);
 		    cell1.innerHTML = '<input id="a"> - <input id="b">';
