--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	function insertRow(){
 		var e = document.getElementById("mainTable").length;
 		var table = document.getElementById("mainTable");
-	    var row = table.insertRow(e);
+	    var row = table.insertRow(i);
 	    var cell1 = row.insertCell(0);
 	    var cell2 = row.insertCell(1);
 	    cell1.innerHTML = '<input id="a"> - <input id="b">';
